deployment/estate-agent-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-estate-agent-backend
  labels:
    app: estate-agent
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estate-agent
      tier: backend
  template:
    metadata:
      labels:
        app: estate-agent
        tier: backend
    spec:
      containers:
        - name: api-estate-agent-backend
          image: 514011952473.dkr.ecr.eu-central-1.amazonaws.com/api-estate-agent-backend:latest
          ports:
            - containerPort: 3000
