deployment/estate-agent-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-estate-agent-backend-service
spec:
  selector:
    app: estate-agent
    tier: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
