deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment  
spec:
  selector: 
    app: frontend-deployment
  ports:
    - port: 80
      targetPort: 80
